# code-review-kit

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  design.md  pyproject.toml
.review/: config.yaml
.review/scanner-results/: aggregated-20260327-224906.json  aggregated-20260327-230823.json
docs/: design-adjustment.md  engineering-patterns.md  workflow-patterns.md
docs/plans/: 2026-04-23-skill-review-improvements.md  2026-04-24-toolification-design.md  2026-04-24-toolification.md
languages/go/: SKILL.md
languages/go/agents/: business.md  coordinator.md  data.md  design.md  naming.md  observability.md  quality.md  safety.md  verifier.md
languages/go/rules/: data.yaml  observability.yaml  pike.yaml  quality.yaml  safety.yaml
languages/go/templates/: context-package.md  report.md
languages/go/tools/: .golangci.yml  aggregate-findings.py  assemble-context.py  classify-diff.py  orchestrate-review.py  scan-architecture.py
languages/go/workflows/: full-review.md  lite-review.md
plans/: go-code-review-skill-v7-implementation.md  go-skill-workflow-restructure.md
scripts/bash/: run-scanners.sh
scripts/powershell/: run-scanners.ps1
src/review_cli/: __init__.py
templates/commands/: analyze.md  auth.md  config.md  fix.md  learn.md  pr.md  predict.md  reply.md  report.md  review.md  scan.md
tests/go_tools/: test_aggregate_findings.py  test_orchestrate_review.py
